--- a/src/componentes/CampoTexto/campo-texto.css
+++ b/src/componentes/CampoTexto/campo-texto.css
@@ -18,3 +18,10 @@
     padding: 24px;
     box-sizing: border-box;
 }
+
+.campo-texto__menor{
+    grid-row: 1/3;
+    grid-column: 1/2;
+    align-self: baseline;
+    
+}
