--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -15,3 +15,18 @@
     font-weight: 400;
     font-size: 32px;
 }
+.campo__add-time{
+    max-height: 20vw;
+    display: grid;
+    grid-template-rows: .5fr 1fr;
+    grid-template-columns: 1fr .1fr;
+}
+
+.time___seletor-cor{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    width: 100%;
+    height: 100%;
+    align-self: flex-end;
+    justify-self: end;
+}
